# pdf-chat

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
configs/: retrieval.toml
data/: eval_cases.example.jsonl  eval_cases.jsonl
docker/: Dockerfile  paddleocr_backend.yaml  preload_models.py
prompts/: answerer.md  direct_chitchat.md  direct_clarify.md  query_rewriter.md  router.md  summarizer.md
scripts/: fetch_sample_pdfs.py  seed_prompts.py
src/rag_exp/agent/: graph.py  llm.py  nodes.py
src/rag_exp/app/: api.py  streamlit_app.py
src/rag_exp/config/: settings.py
src/rag_exp/evaluation/: ragas_eval.py
src/rag_exp/ingestion/: chunker.py  embedder.py  paddleocr_vl_client.py  parser.py  vector_store.py
src/rag_exp/memory/: conversation.py
src/rag_exp/observability/: langfuse_client.py  prompts.py
src/rag_exp/retrieval/: bm25.py  retriever.py
src/rag_exp/scripts/: evaluate_cli.py  ingest_cli.py
tests/: test_chunker.py
