[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_exp"
version = "0.1.0"
description = "Agentic RAG over EN/AR PDFs — LangChain + LangGraph + Qdrant + Ollama + Langfuse + RAGAs"
requires-python = ">=3.11"

dependencies = [
  "langchain==0.3.7",
  "langchain-core==0.3.21",
  "langchain-community==0.3.5",
  "langchain-ollama==0.2.0",
  "langchain-qdrant==0.2.0",
  "langgraph==0.2.50",
  "qdrant-client==1.12.1",
  "docling==2.8.3",
  "pypdf==5.1.0",
  "sentence-transformers==3.3.1",
  "FlagEmbedding==1.3.3",
  "langfuse==2.55.0",
  "ragas==0.2.6",
  "datasets>=2.19.0,<4.0",
  "streamlit==1.40.2",
  "pydantic==2.9.2",
  "sqlmodel==0.0.22",
  "typer>=0.12.5,<0.13.0",
  "rich==13.9.4",
  "python-dotenv==1.0.1",
  "httpx>=0.27,<1.0",
  "pypdfium2>=4.30,<5.0",
  "pillow>=10.0",
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "ruff==0.8.2",
]

[project.scripts]
rag-ingest = "rag_exp.scripts.ingest_cli:main"
rag-evaluate = "rag_exp.scripts.evaluate_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
